# hiring-challenges

./: .gitignore
backend-refactor/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  implementation_log.md  main.py  pyproject.toml  requirements.txt
backend-refactor/api/: __init__.py
backend-refactor/api/exceptions/: __init__.py  exceptions.py
backend-refactor/api/routes/: __init__.py  assets.py  measurements.py  signals.py
backend-refactor/core/: config.py  settings.py
backend-refactor/database/: __init__.py  session.py
backend-refactor/dependencies/: __init__.py  providers.py
backend-refactor/models/: __init__.py  asset.py  measurement.py  signal.py
backend-refactor/repositories/: __init__.py  asset_repository.py  measurement_repository.py  signal_repository.py
backend-refactor/schemas/: __init__.py  asset_schema.py  measurement_schema.py  signal_schema.py
backend-refactor/services/: __init__.py  asset_service.py  measurement_service.py  signal_service.py
backend-refactor/tests/: conftest.py  test_assets.py  test_measurements.py  test_signals.py
