[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signals-backend"
version = "1.0.0"
description = "Backend API for signals management with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lucia", email = "lucia@example.com"},
]
keywords = ["fastapi", "signals", "api", "clean-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dateutil==2.8.2",
    "jinja2==3.1.2",
    "sqlalchemy==2.0.23",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.1",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.7.1",
]

sqlite = [
    "sqlalchemy[sqlite]==2.0.23",
]

[project.urls]
Homepage = "https://github.com/lucianogentilefalcone/hiring-challenges"
Repository = "https://github.com/lucianogentilefalcone/hiring-challenges.git"
Documentation = "https://github.com/lucianogentilefalcone/hiring-challenges#readme"
Issues = "https://github.com/lucianogentilefalcone/hiring-challenges/issues"

[tool.setuptools]
packages = [
    "api",
    "core",
    "database",
    "dependencies",
    "models",
    "repositories",
    "schemas",
    "services",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["api", "core", "database", "dependencies", "models", "repositories", "schemas", "services"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "core", "database", "dependencies", "models", "repositories", "schemas", "services"]
omit = ["*/tests/*", "*/__pycache__/*"]
